gcc/testsuite/rust/rustc/ui/traits/negative-bounds/opaque-type-unsatisfied-fn-bound.rs
//@ compile-flags: -Znext-solver

#![feature(negative_bounds, unboxed_closures)]

fn produce() -> impl !Fn<(u32,)> {}
// { dg-error ".E0271." "" { target *-*-* } .-1 }

fn main() {}

